Add table support to Sanity Studio and fix schema errors
- Added table block type to blockContent schema
- Fixed schema validation errors
- Updated sanity.cli.ts with correct project ID and studio hostname
- Successfully deployed Sanity Studio with table functionality
- Tables support caption, rows, and cells for blog content

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@sanity/client": "latest",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/table": "^2.0.0",
     "@sanity/types": "latest",
     "@sanity/ui": "latest",
     "@sanity/vision": "^3.84.0",
@@ -67,6 +68,7 @@
     "react-dom": "^19",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "latest",
+    "react-is": "^19.1.1",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
