--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "latest",
     "@portabletext/react": "^3.2.1",
     "@radix-ui/react-accordion": "^1.2.2",
+    "@upstash/redis": "^1.35.6",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.2",
