--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "workbox-strategies": "latest",
     "youtube-dl-exec": "^3.0.20",
     "ytdl-core": "^4.11.5",
-    "zod": "latest"
+    "zod": "latest",
+    "next": "^15.0.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.12",
@@ -107,7 +108,6 @@
     "@types/workbox-routing": "^5.0.0",
     "@types/workbox-strategies": "^5.0.0",
     "critters": "^0.0.25",
-    "next": "^16.0.1",
     "pnpm": "^10.11.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
