--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "@sanity/types": "latest",
     "@sanity/ui": "latest",
     "@sanity/vision": "^3.84.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@types/react-google-recaptcha": "^2.1.9",
     "@types/workbox-cacheable-response": "^5.0.0",
     "@upstash/redis": "^1.35.6",
+    "archiver": "^7.0.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -62,6 +64,7 @@
     "https-proxy-agent": "^7.0.6",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "next": "^16.1.1",
     "next-sanity": "^9.12.3",
     "next-themes": "latest",
     "node-fetch": "^3.3.2",
@@ -93,12 +96,12 @@
     "workbox-strategies": "latest",
     "youtube-dl-exec": "^3.0.20",
     "ytdl-core": "^4.11.5",
-    "zod": "latest",
-    "next": "^15.0.0"
+    "zod": "latest"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.12",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/archiver": "^7.0.0",
     "@types/node": "^22.15.18",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
