--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --webpack",
     "build": "next build --webpack",
-    "pages:build": "npx @cloudflare/next-on-pages",
+    "pages:build": "node scripts/prepare-cloudflare.mjs && npx @cloudflare/next-on-pages",
     "preview": "npm run pages:build && wrangler pages dev .vercel/output/static",
     "start": "next start",
     "lint": "next lint"
